[gd_scene load_steps=4 format=3 uid="uid://c2ch44wucrt8m"]

[ext_resource type="Script" path="res://src/simple_menu.gd" id="1_3rbfd"]
[ext_resource type="Script" path="res://src/main.gd" id="1_46xse"]
[ext_resource type="PackedScene" uid="uid://cvfho7uc5x6y1" path="res://src/drawing_board.tscn" id="2_smdne"]

[node name="main" type="Control"]
texture_filter = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_46xse")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="SimpleMenu" type="MenuBar" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
flat = true
script = ExtResource("1_3rbfd")

[node name="Control" type="Control" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer/Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="DrawingBoard" parent="MarginContainer/VBoxContainer/Control/ScrollContainer" instance=ExtResource("2_smdne")]
unique_name_in_owner = true
layout_mode = 2
stroke_size = 2
metadata/_edit_use_anchors_ = true

[connection signal="menu_pressed" from="MarginContainer/VBoxContainer/SimpleMenu" to="." method="_on_simple_menu_menu_pressed"]
[connection signal="draw_finished" from="MarginContainer/VBoxContainer/Control/ScrollContainer/DrawingBoard" to="." method="_on_drawing_board_draw_finished"]
